@@ -175,6 +175,14 @@ class RemoteUsaEpayAdvancedTest < Test::Unit::TestCase
     assert response.params['update_customer_return']
   end
 
+  def test_quick_update_customer
+    response = @gateway.add_customer(@options.merge(@customer_options))
+    customer_number = response.params['add_customer_return']
+
+    response = @gateway.quick_update_customer({customer_number: customer_number, update_data: @update_customer_options})
+    assert response.params['quick_update_customer_return']
+  end
+
   def test_enable_disable_customer
     response = @gateway.add_customer(@options.merge(@customer_options))
     customer_number = response.params['add_customer_return']
